@@ -2,24 +2,25 @@ package com.serveat.service.estadisticas.impl;
 
 import com.serveat.domain.menu.Producto;
 import com.serveat.domain.pago.EstadoPago;
-import com.serveat.domain.pago.MetodoPago;
 import com.serveat.domain.pago.Pago;
-import com.serveat.domain.pedido.EstadoCocina;
 import com.serveat.domain.pedido.EstadoPedido;
 import com.serveat.domain.pedido.LineaPedido;
 import com.serveat.domain.pedido.Pedido;
-import com.serveat.domain.pedido.TipoPedidoCliente;
 import com.serveat.repository.pago.PagoRepository;
 import com.serveat.repository.pedido.PedidoRepository;
 import com.serveat.service.estadisticas.EstadisticasService;
+import com.serveat.service.estadisticas.EstadisticasSnapshot;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.Cacheable;
+import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.time.LocalDate;
-import java.time.Month;
 import java.time.YearMonth;
+import java.time.format.TextStyle;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -30,209 +31,63 @@ public class EstadisticasServiceImpl implements EstadisticasService {
     private final PedidoRepository pedidoRepository;
     private final PagoRepository pagoRepository;
 
-    public EstadisticasServiceImpl(PedidoRepository pedidoRepository,
-                                   PagoRepository pagoRepository) {
+    public EstadisticasServiceImpl(PedidoRepository pedidoRepository, PagoRepository pagoRepository) {
         this.pedidoRepository = pedidoRepository;
         this.pagoRepository = pagoRepository;
     }
 
-    /* Devuelve el número total de pedidos registrados */
+    /* Obtiene un resumen agregado de KPIs para el rango indicado (con caché por rango). */
     @Override
-    public long totalPedidos() {
-        return pedidoRepository.count();
-    }
+    @Cacheable(cacheNames = "snapshot_rango", key = "{#desde,#hasta}")
+    public EstadisticasSnapshot snapshotRango(LocalDate desde, LocalDate hasta) {
+        validarRango(desde, hasta);
 
-    /* Devuelve el número de pedidos confirmados según la regla de negocio */
-    @Override
-    public long pedidosConfirmados() {
-        return pedidoRepository.countByEstado(EstadoPedido.EN_COCINA);
-    }
+        List<Pedido> pedidos = cargarPedidosRango(desde, hasta);
+        long totalP = pedidos.size();
 
-    /* Devuelve el número de pedidos cancelados */
-    @Override
-    public long pedidosCancelados() {
-        return pedidoRepository.countByEstado(EstadoPedido.ANULADO);
-    }
-
-    /* Devuelve el número de pagos confirmados */
-    @Override
-    public long pagosConfirmados() {
-        return pagoRepository.countByEstado(EstadoPago.CONFIRMADO);
-    }
-
-    /* Devuelve el importe total facturado sumando pagos confirmados */
-    @Override
-    public BigDecimal totalFacturado() {
-        List<Pago> pagos = pagoRepository.findByEstado(EstadoPago.CONFIRMADO);
-        return pagos.stream()
-                .map(Pago::getImporte)
-                .filter(Objects::nonNull)
-                .reduce(BigDecimal.ZERO, BigDecimal::add);
-    }
-
-    /* Devuelve los años disponibles en función de los pedidos existentes */
-    @Override
-    public List<Integer> añosDisponibles() {
-        List<Pedido> pedidos = pedidoRepository.findAllByOrderByFechaCreacionDesc();
-        return pedidos.stream()
-                .map(Pedido::getFechaCreacion)
-                .filter(Objects::nonNull)
-                .map(dt -> dt.getYear())
-                .distinct()
-                .sorted(Comparator.reverseOrder())
-                .toList();
-    }
-
-    /* Devuelve todos los meses disponibles para aplicar filtros */
-    @Override
-    public List<Month> mesesDisponibles() {
-        return List.of(Month.values());
-    }
-
-    /* Devuelve el nombre del mes en español */
-    @Override
-    public String etiquetaMes(Month m) {
-        if (m == null) return "-";
-        return switch (m) {
-            case JANUARY -> "Enero";
-            case FEBRUARY -> "Febrero";
-            case MARCH -> "Marzo";
-            case APRIL -> "Abril";
-            case MAY -> "Mayo";
-            case JUNE -> "Junio";
-            case JULY -> "Julio";
-            case AUGUST -> "Agosto";
-            case SEPTEMBER -> "Septiembre";
-            case OCTOBER -> "Octubre";
-            case NOVEMBER -> "Noviembre";
-            case DECEMBER -> "Diciembre";
-        };
-    }
-
-    /* Devuelve la etiqueta legible de un método de pago */
-    @Override
-    public String etiquetaMetodoPago(MetodoPago m) {
-        if (m == null) return "-";
-        return switch (m) {
-            case TARJETA -> "Tarjeta";
-            case PAYPAL -> "PayPal";
-            case EFECTIVO -> "Efectivo";
-        };
-    }
-
-    /* Devuelve la etiqueta legible del tipo de pedido */
-    @Override
-    public String etiquetaTipoPedido(TipoPedidoCliente t) {
-        if (t == null) return "-";
-        return switch (t) {
-            case RECOGER -> "Recoger";
-            case DOMICILIO -> "Domicilio";
-        };
-    }
-
-    /* Devuelve la etiqueta legible del estado del pedido */
-    @Override
-    public String etiquetaEstadoPedido(EstadoPedido e) {
-        if (e == null) return "-";
-        return switch (e) {
-            case EN_CURSO -> "En curso";
-            case EN_COCINA -> "En cocina";
-            case ANULADO -> "Anulado";
-        };
-    }
-
-    /* Devuelve la etiqueta legible del estado de cocina */
-    @Override
-    public String etiquetaEstadoCocina(EstadoCocina e) {
-        if (e == null) return "-";
-        return switch (e) {
-            case PENDIENTE_ACEPTACION -> "Pendiente aceptación";
-            case ACEPTADO -> "Aceptado";
-            case EN_PREPARACION -> "En preparación";
-            case LISTO -> "Listo";
-            case CANCELADO -> "Cancelado";
-        };
-    }
-
-    /* Mensaje estándar a mostrar cuando no hay resultados */
-    @Override
-    public String mensajeSinResultados() {
-        return "No hay resultados, selecciona otros filtros.";
-    }
-
-    /* Devuelve sugerencias de productos según prefijo y filtros aplicados */
-    @Override
-    public List<String> sugerirProductos(String prefix,
-                                         Integer year, Month month,
-                                         TipoPedidoCliente tipoPedido,
-                                         MetodoPago metodoPago,
-                                         EstadoPedido estadoPedido,
-                                         EstadoCocina estadoCocina,
-                                         int limit) {
-
-        int lim = normalizarLimit(limit, 5, 25);
-        String s = normalizar(prefix);
-
-        List<Pedido> pedidos = cargarPedidosFiltrados(year, month, tipoPedido, estadoPedido, estadoCocina);
-
-        Set<String> nombres = new HashSet<>();
-
-        // Cache local para no repetir consultas por pedido
-        Map<String, Optional<Pago>> pagoPorPedido = new HashMap<>();
-
-        for (Pedido p : pedidos) {
-            if (!cumpleMetodoPago(p, metodoPago, pagoPorPedido)) continue;
-
-            if (p.getLineaPedidos() == null) continue;
-            for (LineaPedido lp : p.getLineaPedidos()) {
-                if (lp == null) continue;
-                Producto prod = lp.getProducto();
-                if (prod == null || prod.getNombre() == null) continue;
-
-                String nombre = prod.getNombre();
-                if (!s.isBlank() && !nombre.toLowerCase().contains(s)) continue;
-
-                nombres.add(nombre);
-            }
+        if (totalP == 0) {
+            return EstadisticasSnapshot.vacio(desde, hasta);
         }
 
-        return nombres.stream()
-                .sorted(String.CASE_INSENSITIVE_ORDER)
-                .limit(lim)
-                .toList();
-    }
+        long confirmados = pedidos.stream()
+                .filter(p -> p.getEstado() == EstadoPedido.EN_COCINA)
+                .count();
 
-    /* Devuelve el total de productos distintos en el ranking por unidades */
-    @Override
-    public long topProductosPorUnidadesCount(Integer year, Month month,
-                                             TipoPedidoCliente tipoPedido,
-                                             MetodoPago metodoPago,
-                                             EstadoPedido estadoPedido,
-                                             EstadoCocina estadoCocina,
-                                             String productoExactoOrNull) {
+        long anulados = pedidos.stream()
+                .filter(p -> p.getEstado() == EstadoPedido.ANULADO)
+                .count();
 
-        return construirMapaUnidades(year, month, tipoPedido, metodoPago, estadoPedido, estadoCocina, productoExactoOrNull).size();
-    }
+        List<Pago> pagosConf = pagosConfirmadosEnRango(desde, hasta);
+        long pagosConfirmados = pagosConf.size();
 
-    /* Devuelve una página del ranking de productos por unidades vendidas */
-    @Override
-    public List<Map<String, Object>> topProductosPorUnidadesPage(Integer year, Month month,
-                                                                 TipoPedidoCliente tipoPedido,
-                                                                 MetodoPago metodoPago,
-                                                                 EstadoPedido estadoPedido,
-                                                                 EstadoCocina estadoCocina,
-                                                                 String productoExactoOrNull,
-                                                                 int offset, int limit) {
+        BigDecimal fact = pagosConf.stream()
+                .map(Pago::getImporte)
+                .filter(Objects::nonNull)
+                .reduce(BigDecimal.ZERO, BigDecimal::add)
+                .setScale(2, RoundingMode.HALF_UP);
 
-        Validaciones.validarPaginacion(offset, limit);
-
-        Map<String, Long> unidades = construirMapaUnidades(
-                year, month, tipoPedido, metodoPago, estadoPedido, estadoCocina, productoExactoOrNull
+        return new EstadisticasSnapshot(
+                desde,
+                hasta,
+                true,
+                totalP,
+                confirmados,
+                anulados,
+                pagosConfirmados,
+                fact
         );
+    }
 
-        return unidades.entrySet().stream()
+    /* Devuelve el ranking de productos por unidades vendidas en el rango (limitado). */
+    @Override
+    @Cacheable(cacheNames = "top_unidades_rango", key = "{#desde,#hasta,#limit}")
+    public List<Map<String, Object>> topProductosPorUnidades(LocalDate desde, LocalDate hasta, int limit) {
+        Validaciones.validarLimit(limit);
+
+        Map<String, Long> mapa = construirMapaUnidades(desde, hasta);
+
+        return mapa.entrySet().stream()
                 .sorted((a, b) -> Long.compare(b.getValue(), a.getValue()))
-                .skip(offset)
                 .limit(limit)
                 .map(e -> {
                     Map<String, Object> row = new LinkedHashMap<>();
@@ -240,215 +95,321 @@ public class EstadisticasServiceImpl implements EstadisticasService {
                     row.put("unidades", e.getValue());
                     return row;
                 })
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    private Map<String, Long> construirMapaUnidades(Integer year, Month month,
-                                                    TipoPedidoCliente tipoPedido,
-                                                    MetodoPago metodoPago,
-                                                    EstadoPedido estadoPedido,
-                                                    EstadoCocina estadoCocina,
-                                                    String productoExactoOrNull) {
-
-        List<Pedido> pedidos = cargarPedidosFiltrados(year, month, tipoPedido, estadoPedido, estadoCocina);
-
-        Map<String, Long> unidades = new HashMap<>();
-        Map<String, Optional<Pago>> pagoPorPedido = new HashMap<>();
-
-        String productoExacto = normalizar(productoExactoOrNull);
-
-        for (Pedido p : pedidos) {
-            if (!cumpleMetodoPago(p, metodoPago, pagoPorPedido)) continue;
-
-            if (p.getLineaPedidos() == null) continue;
-            for (LineaPedido lp : p.getLineaPedidos()) {
-                if (lp == null) continue;
-
-                Producto prod = lp.getProducto();
-                if (prod == null || prod.getNombre() == null) continue;
-
-                String nombre = prod.getNombre();
-
-                // Filtro por producto exacto (si viene informado)
-                if (!productoExacto.isBlank() && !nombre.equalsIgnoreCase(productoExacto)) continue;
-
-                long qty = lp.getCantidad();
-                if (qty <= 0) continue;
-
-                unidades.merge(nombre, qty, Long::sum);
-            }
-        }
-
-        return unidades;
-    }
-
-    /* Devuelve el total de productos distintos en el ranking por facturación */
+    /* Devuelve el ranking de productos por facturación en el rango (limitado). */
     @Override
-    public long topProductosPorFacturacionCount(Integer year, Month month,
-                                                TipoPedidoCliente tipoPedido,
-                                                MetodoPago metodoPago,
-                                                EstadoPedido estadoPedido,
-                                                EstadoCocina estadoCocina,
-                                                String productoExactoOrNull) {
+    @Cacheable(cacheNames = "top_facturacion_rango", key = "{#desde,#hasta,#limit}")
+    public List<Map<String, Object>> topProductosPorFacturacion(LocalDate desde, LocalDate hasta, int limit) {
+        Validaciones.validarLimit(limit);
 
-        return construirMapaFacturacion(year, month, tipoPedido, metodoPago, estadoPedido, estadoCocina, productoExactoOrNull).size();
-    }
+        Map<String, BigDecimal> mapa = construirMapaFacturacion(desde, hasta);
 
-    /* Devuelve una página del ranking de productos por facturación */
-    @Override
-    public List<Map<String, Object>> topProductosPorFacturacionPage(Integer year, Month month,
-                                                                    TipoPedidoCliente tipoPedido,
-                                                                    MetodoPago metodoPago,
-                                                                    EstadoPedido estadoPedido,
-                                                                    EstadoCocina estadoCocina,
-                                                                    String productoExactoOrNull,
-                                                                    int offset, int limit) {
-
-        Validaciones.validarPaginacion(offset, limit);
-
-        Map<String, BigDecimal> total = construirMapaFacturacion(
-                year, month, tipoPedido, metodoPago, estadoPedido, estadoCocina, productoExactoOrNull
-        );
-
-        return total.entrySet().stream()
+        return mapa.entrySet().stream()
                 .sorted((a, b) -> b.getValue().compareTo(a.getValue()))
-                .skip(offset)
                 .limit(limit)
                 .map(e -> {
                     Map<String, Object> row = new LinkedHashMap<>();
                     row.put("producto", e.getKey());
-                    row.put("total", e.getValue().setScale(2, RoundingMode.HALF_UP));
+                    row.put("total", (e.getValue() == null ? BigDecimal.ZERO : e.getValue()).setScale(2, RoundingMode.HALF_UP));
                     return row;
                 })
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    private Map<String, BigDecimal> construirMapaFacturacion(Integer year, Month month,
-                                                             TipoPedidoCliente tipoPedido,
-                                                             MetodoPago metodoPago,
-                                                             EstadoPedido estadoPedido,
-                                                             EstadoCocina estadoCocina,
-                                                             String productoExactoOrNull) {
+    /* Construye una serie mensual lista para representación: mes, valor y marca del máximo. */
+    @Override
+    @Cacheable(cacheNames = "serie_mensual_vista", key = "{#yearDesde,#yearHasta,#tipo}")
+    public List<Map<String, Object>> serieMensualVista(int yearDesde, int yearHasta, String tipo) {
+        if (yearDesde > yearHasta) throw new IllegalArgumentException("Rango de años inválido");
+        if (tipo == null) tipo = "Unidades";
 
-        List<Pedido> pedidos = cargarPedidosFiltrados(year, month, tipoPedido, estadoPedido, estadoCocina);
+        final boolean esUnidades = "Unidades".equalsIgnoreCase(tipo);
 
-        Map<String, BigDecimal> total = new HashMap<>();
-        Map<String, Optional<Pago>> pagoPorPedido = new HashMap<>();
+        Map<YearMonth, BigDecimal> serie = esUnidades
+                ? convertirUnidadesABigDecimal(serieMensualUnidades(yearDesde, yearHasta))
+                : serieMensualFacturacion(yearDesde, yearHasta);
 
-        String productoExacto = normalizar(productoExactoOrNull);
+        if (serie.isEmpty()) return List.of();
+
+        BigDecimal max = serie.values().stream()
+                .filter(Objects::nonNull)
+                .max(Comparator.naturalOrder())
+                .orElse(BigDecimal.ZERO);
+
+        List<Map<String, Object>> rows = new ArrayList<>();
+        for (Map.Entry<YearMonth, BigDecimal> e : serie.entrySet()) {
+            BigDecimal v = e.getValue() == null ? BigDecimal.ZERO : e.getValue();
+            Map<String, Object> row = new LinkedHashMap<>();
+            row.put("mes", etiquetaMes(e.getKey()));
+            row.put("valor", v.setScale(2, RoundingMode.HALF_UP));
+            row.put("max", v.compareTo(max) == 0 && max.compareTo(BigDecimal.ZERO) > 0);
+            rows.add(row);
+        }
+        return rows;
+    }
+
+    /* Calcula la serie mensual de facturación (YearMonth -> total), inicializando meses sin datos a cero. */
+    @Override
+    @Cacheable(cacheNames = "serie_mensual_facturacion", key = "{#yearDesde,#yearHasta}")
+    public Map<YearMonth, BigDecimal> serieMensualFacturacion(int yearDesde, int yearHasta) {
+        if (yearDesde > yearHasta) throw new IllegalArgumentException("Rango de años inválido");
+
+        Map<YearMonth, BigDecimal> serie = inicializarSerieFacturacion(yearDesde, yearHasta);
+
+        LocalDate desde = LocalDate.of(yearDesde, 1, 1);
+        LocalDate hasta = LocalDate.of(yearHasta, 12, 31);
+
+        List<Pedido> pedidos = cargarPedidosRango(desde, hasta);
 
         for (Pedido p : pedidos) {
-            if (!cumpleMetodoPago(p, metodoPago, pagoPorPedido)) continue;
+            if (p.getFechaCreacion() == null) continue;
 
-            if (p.getLineaPedidos() == null) continue;
-            for (LineaPedido lp : p.getLineaPedidos()) {
+            YearMonth ym = YearMonth.from(p.getFechaCreacion().toLocalDate());
+            List<LineaPedido> lineas = p.getLineaPedidos();
+            if (lineas == null) continue;
+
+            BigDecimal totalMes = BigDecimal.ZERO;
+
+            for (LineaPedido lp : lineas) {
                 if (lp == null) continue;
 
                 Producto prod = lp.getProducto();
                 if (prod == null || prod.getNombre() == null) continue;
 
-                String nombre = prod.getNombre();
+                BigDecimal precio = prod.getPrecio() == null ? BigDecimal.ZERO : prod.getPrecio();
+                long qty = lp.getCantidad();
+                if (qty <= 0) continue;
 
-                // Filtro por producto exacto (si viene informado)
-                if (!productoExacto.isBlank() && !nombre.equalsIgnoreCase(productoExacto)) continue;
+                totalMes = totalMes.add(precio.multiply(BigDecimal.valueOf(qty)));
+            }
 
-                BigDecimal precio = prod.getPrecio() != null ? prod.getPrecio() : BigDecimal.ZERO;
+            serie.merge(ym, totalMes, BigDecimal::add);
+        }
+
+        serie.replaceAll((k, v) -> (v == null ? BigDecimal.ZERO : v).setScale(2, RoundingMode.HALF_UP));
+        return serie;
+    }
+
+    /* Calcula la serie mensual de unidades (YearMonth -> unidades), inicializando meses sin datos a cero. */
+    @Override
+    @Cacheable(cacheNames = "serie_mensual_unidades", key = "{#yearDesde,#yearHasta}")
+    public Map<YearMonth, Long> serieMensualUnidades(int yearDesde, int yearHasta) {
+        if (yearDesde > yearHasta) throw new IllegalArgumentException("Rango de años inválido");
+
+        Map<YearMonth, Long> serie = inicializarSerieUnidades(yearDesde, yearHasta);
+
+        LocalDate desde = LocalDate.of(yearDesde, 1, 1);
+        LocalDate hasta = LocalDate.of(yearHasta, 12, 31);
+
+        List<Pedido> pedidos = cargarPedidosRango(desde, hasta);
+
+        for (Pedido p : pedidos) {
+            if (p.getFechaCreacion() == null) continue;
+
+            YearMonth ym = YearMonth.from(p.getFechaCreacion().toLocalDate());
+            List<LineaPedido> lineas = p.getLineaPedidos();
+            if (lineas == null) continue;
+
+            long unidadesMes = 0L;
+            for (LineaPedido lp : lineas) {
+                if (lp == null) continue;
+                long qty = lp.getCantidad();
+                if (qty <= 0) continue;
+                unidadesMes += qty;
+            }
+
+            serie.merge(ym, unidadesMes, Long::sum);
+        }
+
+        return serie;
+    }
+
+    /* Devuelve la lista de años disponibles a partir de la fecha de creación de los pedidos. */
+    @Override
+    @Cacheable(cacheNames = "años_disponibles", key = "'all'")
+    public List<Integer> añosDisponibles() {
+        List<Pedido> pedidos = pedidoRepository.findAllByOrderByFechaCreacionDesc();
+        if (pedidos == null || pedidos.isEmpty()) return List.of(LocalDate.now().getYear());
+
+        TreeSet<Integer> years = new TreeSet<>();
+        for (Pedido p : pedidos) {
+            if (p.getFechaCreacion() == null) continue;
+            years.add(p.getFechaCreacion().toLocalDate().getYear());
+        }
+
+        if (years.isEmpty()) years.add(LocalDate.now().getYear());
+        return new ArrayList<>(years);
+    }
+
+    /* Mensaje estándar cuando no hay resultados para el criterio consultado. */
+    @Override
+    public String mensajeSinResultados() {
+        return "No hay resultados.";
+    }
+
+    /* Invalida las cachés de estadísticas para forzar recálculo bajo demanda. */
+    @Override
+    @Async
+    @CacheEvict(
+            cacheNames = {
+                    "snapshot_rango",
+                    "top_unidades_rango",
+                    "top_facturacion_rango",
+                    "serie_mensual_vista",
+                    "serie_mensual_facturacion",
+                    "serie_mensual_unidades",
+                    "años_disponibles"
+            },
+            allEntries = true
+    )
+    public void recalcularEstadisticasAsync() {
+        /* Evicción asíncrona de caché. */
+    }
+
+    /* Valida la coherencia del rango de fechas. */
+    private void validarRango(LocalDate desde, LocalDate hasta) {
+        if (desde != null && hasta != null && desde.isAfter(hasta)) {
+            throw new IllegalArgumentException("La fecha 'Desde' no puede ser posterior a 'Hasta'.");
+        }
+    }
+
+    /* Carga pedidos y aplica filtro por rango de fechas sobre la fecha de creación. */
+    private List<Pedido> cargarPedidosRango(LocalDate desde, LocalDate hasta) {
+        validarRango(desde, hasta);
+
+        List<Pedido> pedidos = pedidoRepository.findAllByOrderByFechaCreacionDesc();
+
+        return pedidos.stream()
+                .filter(p -> p.getFechaCreacion() != null)
+                .filter(p -> {
+                    LocalDate f = p.getFechaCreacion().toLocalDate();
+                    if (desde != null && f.isBefore(desde)) return false;
+                    if (hasta != null && f.isAfter(hasta)) return false;
+                    return true;
+                })
+                .collect(Collectors.toList());
+    }
+
+    /* Obtiene pagos confirmados y aplica filtro por rango usando la fecha del pedido asociado. */
+    private List<Pago> pagosConfirmadosEnRango(LocalDate desde, LocalDate hasta) {
+        validarRango(desde, hasta);
+
+        List<Pago> pagos = pagoRepository.findByEstado(EstadoPago.CONFIRMADO);
+
+        return pagos.stream()
+                .filter(p -> p.getPedido() != null && p.getPedido().getFechaCreacion() != null)
+                .filter(p -> {
+                    LocalDate f = p.getPedido().getFechaCreacion().toLocalDate();
+                    if (desde != null && f.isBefore(desde)) return false;
+                    if (hasta != null && f.isAfter(hasta)) return false;
+                    return true;
+                })
+                .collect(Collectors.toList());
+    }
+
+    /* Agrega unidades por producto en el rango indicado. */
+    private Map<String, Long> construirMapaUnidades(LocalDate desde, LocalDate hasta) {
+        List<Pedido> pedidos = cargarPedidosRango(desde, hasta);
+
+        Map<String, Long> res = new HashMap<>();
+
+        for (Pedido p : pedidos) {
+            List<LineaPedido> lineas = p.getLineaPedidos();
+            if (lineas == null) continue;
+
+            for (LineaPedido lp : lineas) {
+                if (lp == null) continue;
+
+                Producto prod = lp.getProducto();
+                if (prod == null || prod.getNombre() == null) continue;
 
                 long qty = lp.getCantidad();
                 if (qty <= 0) continue;
 
-                BigDecimal linea = precio.multiply(BigDecimal.valueOf(qty));
-                total.merge(nombre, linea, BigDecimal::add);
+                res.merge(prod.getNombre(), qty, Long::sum);
             }
-        }
-
-        return total;
-    }
-
-    /* Devuelve el conteo de pedidos agrupados por estado de cocina, aplicando filtros */
-    @Override
-    public Map<String, Long> resumenEstadosCocina(Integer year, Month month,
-                                                  TipoPedidoCliente tipoPedido,
-                                                  EstadoPedido estadoPedido) {
-
-        List<Pedido> pedidos = cargarPedidosFiltrados(year, month, tipoPedido, estadoPedido, null);
-
-        Map<String, Long> res = new LinkedHashMap<>();
-        // Siempre devolvemos todos los estados (aunque sea 0) para que la vista no falle
-        for (EstadoCocina ec : EstadoCocina.values()) {
-            res.put(etiquetaEstadoCocina(ec), 0L);
-        }
-
-        Map<EstadoCocina, Long> conteo = pedidos.stream()
-                .map(Pedido::getEstadoCocina)
-                .filter(Objects::nonNull)
-                .collect(Collectors.groupingBy(e -> e, Collectors.counting()));
-
-        for (Map.Entry<EstadoCocina, Long> e : conteo.entrySet()) {
-            res.put(etiquetaEstadoCocina(e.getKey()), e.getValue());
         }
 
         return res;
     }
 
-    private List<Pedido> cargarPedidosFiltrados(Integer year, Month month,
-                                                TipoPedidoCliente tipoPedido,
-                                                EstadoPedido estadoPedido,
-                                                EstadoCocina estadoCocina) {
+    /* Agrega facturación por producto en el rango indicado. */
+    private Map<String, BigDecimal> construirMapaFacturacion(LocalDate desde, LocalDate hasta) {
+        List<Pedido> pedidos = cargarPedidosRango(desde, hasta);
 
-        List<Pedido> pedidos = pedidoRepository.findAllByOrderByFechaCreacionDesc();
+        Map<String, BigDecimal> res = new HashMap<>();
 
-        LocalDate desde = null;
-        LocalDate hasta = null;
+        for (Pedido p : pedidos) {
+            List<LineaPedido> lineas = p.getLineaPedidos();
+            if (lineas == null) continue;
 
-        if (year != null && month != null) {
-            YearMonth ym = YearMonth.of(year, month);
-            desde = ym.atDay(1);
-            hasta = ym.atEndOfMonth();
+            for (LineaPedido lp : lineas) {
+                if (lp == null) continue;
+
+                Producto prod = lp.getProducto();
+                if (prod == null || prod.getNombre() == null) continue;
+
+                long qty = lp.getCantidad();
+                if (qty <= 0) continue;
+
+                BigDecimal precio = prod.getPrecio() == null ? BigDecimal.ZERO : prod.getPrecio();
+                BigDecimal linea = precio.multiply(BigDecimal.valueOf(qty));
+
+                res.merge(prod.getNombre(), linea, BigDecimal::add);
+            }
         }
 
-        LocalDate finalDesde = desde;
-        LocalDate finalHasta = hasta;
-
-        return pedidos.stream()
-                .filter(p -> {
-                    if (finalDesde == null || finalHasta == null) return true;
-                    if (p.getFechaCreacion() == null) return false;
-                    LocalDate f = p.getFechaCreacion().toLocalDate();
-                    return (!f.isBefore(finalDesde) && !f.isAfter(finalHasta));
-                })
-                .filter(p -> tipoPedido == null || p.getTipoPedido() == tipoPedido)
-                .filter(p -> estadoPedido == null || p.getEstado() == estadoPedido)
-                .filter(p -> estadoCocina == null || p.getEstadoCocina() == estadoCocina)
-                .toList();
+        return res;
     }
 
-    private boolean cumpleMetodoPago(Pedido pedido,
-                                     MetodoPago metodoPago,
-                                     Map<String, Optional<Pago>> cache) {
-        if (metodoPago == null) return true;
+    /* Inicializa una serie mensual de facturación con meses del rango [yearDesde..yearHasta] a cero. */
+    private Map<YearMonth, BigDecimal> inicializarSerieFacturacion(int yearDesde, int yearHasta) {
+        Map<YearMonth, BigDecimal> serie = new LinkedHashMap<>();
+        YearMonth it = YearMonth.of(yearDesde, 1);
+        YearMonth end = YearMonth.of(yearHasta, 12);
 
-        String codigo = pedido.getCodigo();
-        Optional<Pago> pagoOpt = cache.computeIfAbsent(codigo, pagoRepository::findByPedido_Codigo);
-
-        return pagoOpt.map(p -> p.getMetodo() == metodoPago).orElse(false);
+        while (!it.isAfter(end)) {
+            serie.put(it, BigDecimal.ZERO);
+            it = it.plusMonths(1);
+        }
+        return serie;
     }
 
-    private String normalizar(String s) {
-        if (s == null) return "";
-        String x = s.trim();
-        return x.isBlank() ? "" : x.toLowerCase();
+    /* Inicializa una serie mensual de unidades con meses del rango [yearDesde..yearHasta] a cero. */
+    private Map<YearMonth, Long> inicializarSerieUnidades(int yearDesde, int yearHasta) {
+        Map<YearMonth, Long> serie = new LinkedHashMap<>();
+        YearMonth it = YearMonth.of(yearDesde, 1);
+        YearMonth end = YearMonth.of(yearHasta, 12);
+
+        while (!it.isAfter(end)) {
+            serie.put(it, 0L);
+            it = it.plusMonths(1);
+        }
+        return serie;
     }
 
-    private int normalizarLimit(int limit, int min, int max) {
-        if (limit <= 0) return min;
-        if (limit < min) return min;
-        return Math.min(limit, max);
+    /* Convierte una serie mensual de unidades a BigDecimal para representación homogénea. */
+    private Map<YearMonth, BigDecimal> convertirUnidadesABigDecimal(Map<YearMonth, Long> unidades) {
+        Map<YearMonth, BigDecimal> res = new LinkedHashMap<>();
+        for (Map.Entry<YearMonth, Long> e : unidades.entrySet()) {
+            long v = e.getValue() == null ? 0L : e.getValue();
+            res.put(e.getKey(), BigDecimal.valueOf(v));
+        }
+        return res;
     }
 
+    /* Genera una etiqueta de mes en formato corto y localización española. */
+    private String etiquetaMes(YearMonth ym) {
+        Locale es = new Locale("es", "ES");
+        String mes = ym.getMonth().getDisplayName(TextStyle.SHORT, es);
+        return mes + " " + ym.getYear();
+    }
+
+    /* Validaciones de parámetros de entrada. */
     private static class Validaciones {
-        static void validarPaginacion(int offset, int limit) {
-            if (offset < 0) throw new IllegalArgumentException("Offset inválido");
+        static void validarLimit(int limit) {
             if (limit <= 0) throw new IllegalArgumentException("Limit inválido");
             if (limit > 200) throw new IllegalArgumentException("Limit demasiado alto (máx 200)");
         }
